# generate-mnemonic

./: Cargo.toml  README.md
src/: btc.rs  chain.rs  eth.rs  main.rs  sol.rs  vanity.rs  words.rs
